refactor & add karma server

--- a/public/app/partials/movie.html
+++ b/public/app/partials/movie.html
@@ -1,4 +1,5 @@
 <div class="poster-container">
+	<div class="overlay"></div>
 	<img class="poster" src="{{movie.poster}}">
 </div>
 <div class="info" align=center>
