--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,33 +8,47 @@ movie {
   position: relative;
   display: inline;
   float: left;
-  margin-right: 2.5%;
-  margin-bottom: 1%;
-  padding-top: 1%;
+  margin: 1%;
 }
 
 movie:hover {
-  border-style: solid;
-  border-width: 2px;
-  border-color: #303030;
   cursor: pointer;
 }
 
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 99%, rgba(0,0,0,0.65) 100%);
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 99%,rgba(0,0,0,0.65) 100%);
+  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 99%,rgba(0,0,0,0.65) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+  -webkit-transition: all ease .5s;
+  -moz-transition: all ease .5s;
+  transition: all ease .5s;
+}
+
+.overlay:hover {
+  opacity: 1;
+}
+
 .poster{
-  height: 160px;
-  margin:auto;
+  height: 200px;
+  margin: auto;
   display: block;
 }
 
 .poster-big{
   height: 280px;
-  margin:auto;
+  margin: auto;
   display: block;
 }
 
-#preview{
+preview{
   height: 50%;
-  background-color: #303030;
+  width: 100%;
+  background-color: #F0F0F0;
 }
 
 .preview-header{
