--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,4 +1,4 @@
-<div class="movie">
+<div class="movie" (click)="displayPreview()">
     <div class="poster-container">
         <img class="poster" src="{{movie.posterUrl}}">
     </div>
