--- a/src/app/movie-dashboard/movie-dashboard.component.html
+++ b/src/app/movie-dashboard/movie-dashboard.component.html
@@ -1,8 +1,7 @@
 <h1>{{title}}</h1>
 
-<div class="row" *ngFor="let filteredMovies of movies | groupBy:4; let i = index">
-    <div class="col-sm-3" *ngFor="let movie of filteredMovies">
-        <movie [movie]="movie" (click)="togglePreview(movie, i)"></movie>
+<div class="row">
+    <div class="col-sm-3" *ngFor="let movie of movies">
+        <movie [movie]="movie" (click)="togglePreview(movie)"></movie>
     </div>
-    <preview *ngIf="(previewIndex === i)" [movie]="selectedMovie"></preview>
 </div>
