--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
     <div class="navbar-header">
         <a class="navbar-brand" href="/">elkServer</a>
     </div>
@@ -18,7 +18,7 @@
             </form>
         </ul>
     </div>
-</div>
+</nav>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
