--- a/src/app/core/movie/movie.component.html
+++ b/src/app/core/movie/movie.component.html
@@ -4,6 +4,6 @@
     </div>
     <div class="info">
         <p id="title">{{movie.title}}</p>
-        <p id="date">{{movie.year}}</p>
+        <p id="date">{{movie.year | date}}</p>
     </div>
 </div>
