--- a/src/app/preview/preview.component.css
+++ b/src/app/preview/preview.component.css
@@ -2,6 +2,7 @@ hr {
   width: 100%;
   height: 0.5px;
   color: #FFF;
+  margin-bottom: 35px;
 }
 
 .image-container {
@@ -14,11 +15,31 @@ hr {
   display: block;
 }
 
-.play {
+.button {
+  color: #fff;
+  padding: 15px 15px;
+  margin-right: 15px;
   display: inline;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  text-decoration: none;
+  border-radius: 4px;
+  background-color: #697a83;
+  -webkit-transition: background-color 0.35s;
+  -moz-transition: background-color 0.35s;
+  -o-transition: background-color 0.35s;
+  transition: background-color 0.35s;
 }
 
-.download {
-  display: inline;
-  margin-left: 15px;
+.button:hover {
+  cursor: pointer;
+  background-color: #222;
+  -webkit-transition: background-color 0.35s;
+  -moz-transition: background-color 0.35s;
+  -o-transition: background-color 0.35s;
+  transition: background-color 0.35s;
 }
