--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -5,10 +5,19 @@
     <div class="col-md-8">
         <h2>{{movie.title}}</h2>
         <p>{{movie.director}}</p>
-        <p>{{movie.genre}}</p>
+        <p>{{movie.genre.join(', ')}}</p>
         <p>{{movie.plot}}</p>
-        <hr noshade>
-        <a (click)="playMovie()" class="btn btn-primary play">Play</a>
-        <a href={{movie.path}} class="btn btn-success download" target="_blank">Download</a>
+        <hr>
+        <a (click)="playMovie()" class="button btn-play">Play</a>
+        <a href={{movie.path}} class="button btn-download" target="_blank">Download</a>
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="col-sm-12">
+        <h4>Related Movies:</h4>
+    </div>
+    <div class="col-sm-3" *ngFor="let relMovie of relatedMovies">
+        <movie [movie]="relMovie"></movie>
     </div>
 </div>
