--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,4 @@
     <router-outlet></router-outlet>
 </div>
 
-<upload *ngIf="showModal" (delete)="modalDeleted($event)"></upload>
+<reelr-upload *ngIf="showModal" (delete)="modalDeleted($event)"></reelr-upload>
