--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -17,7 +17,7 @@
     <div class="col-sm-12">
         <h4>Related Movies:</h4>
     </div>
-    <div class="col-sm-3" *ngFor="let relMovie of relatedMovies">
-        <movie [movie]="relMovie"></movie>
+    <div class="col-sm-3" *ngFor="let relatedMovie of relatedMovies">
+        <reelr-movie [movie]="relatedMovie"></reelr-movie>
     </div>
 </div>
