--- a/src/app/movie-dashboard/movie-dashboard.component.html
+++ b/src/app/movie-dashboard/movie-dashboard.component.html
@@ -2,6 +2,6 @@
 
 <div class="row">
     <div class="col-sm-3" *ngFor="let movie of movies">
-        <movie [movie]="movie"></movie>
+        <reelr-movie [movie]="movie"></reelr-movie>
     </div>
 </div>
