--- a/src/app/upload/upload.component.css
+++ b/src/app/upload/upload.component.css
@@ -66,20 +66,66 @@
     color: #000;
 }
 
-.modal-body label {
-    font-weight: 400;
-    margin: 0;
-    background-color: #9d9d9d;
-    padding: 10px 10px;
-    border-radius: 3px;
-}
-
-.modal-body label:hover {
-    cursor: pointer;
-    background-color: #8c8c8c;
-}
-
 .modal-footer {
     padding: 15px 15px;
     background-color: #303030;
+}
+
+.file-wrapper dt {
+    display: inline-flex;
+}
+
+.progress {
+    display: inline-flex;
+    float: right;
+    width: 80%;
+}
+
+auto-complete > input {
+    border-radius: 2px;
+}
+
+#auto-complete-container {
+    z-index: 600;
+    position: absolute;
+    left: 0;
+    overflow-y: scroll;
+    height: 60vh;
+    width: 100%;
+    text-indent: 0;
+}
+
+#auto-complete-container > ul {
+    padding: 0;
+    width: 230px;
+    margin: auto;
+    box-shadow: 0 4px 6px 2px rgba(0, 0, 0, .10);
+    border: 1px solid #ccc;
+    border-color: rgba(0, 0, 0, .15);
+    border-radius: 2px;
+}
+
+.autocomplete-choice {
+    text-decoration: none;
+    list-style: none;
+    background-color: #fff;
+    border-bottom: solid 1px;
+    border-right: solid 1px;
+    border-left: solid 1px;
+    border-color: #ccc;
+    text-indent: 0px;
+    padding: 5px;
+    margin: 0;
+}
+
+.autocomplete-choice-hover,
+.autocomplete-choice:hover {
+    background-color: #f1f1f1;
+    color: #2085b9;
+    cursor: pointer;
+}
+
+.autocomplete-choice > p {
+    font-size: 14px;
+    margin-bottom: 0;
 }
