--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,41 @@ body {
     margin-right: auto;
     text-align: center;
 }
+
+.button {
+  color: #fff;
+  padding: 15px 15px;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  border: 1px solid transparent;
+  text-decoration: none;
+  border-radius: 4px;
+  background-color: #697a83;
+  -webkit-transition: background-color 0.35s;
+  -moz-transition: background-color 0.35s;
+  -o-transition: background-color 0.35s;
+  transition: background-color 0.35s;
+}
+
+.button:hover {
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  background-color: #222;
+  -webkit-transition: background-color 0.35s;
+  -moz-transition: background-color 0.35s;
+  -o-transition: background-color 0.35s;
+  transition: background-color 0.35s;
+}
+
+.button[disabled] {
+    background-color: #a2b5b4;
+}
+
+.button:hover[disabled] {
+    cursor: not-allowed;
+    background-color: #a2b5b4;
+}
