--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,6 +1,6 @@
 <div class="movie" (click)="displayPreview()">
     <div class="poster-container">
-        <img class="poster" src="{{movie.posterUrl}}">
+        <img class="poster" src="{{movie.posterUrl}}" />
     </div>
     <div class="info">
         <p id="title">{{movie.title}}</p>
