--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,5 +1,5 @@
 <div id="video-wrapper">
     <video id="player" align="center" width="100%" controls autoplay>
-        <source id="source" src="{{movie.path}}"> Your browser does not support the video tag.
+        <source id="source" src="{{movie.path}}" /> Your browser does not support the video tag.
     </video>
 </div>
